terminada pagina de contacto

--- a/pages/bikes_for_sale.html
+++ b/pages/bikes_for_sale.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <div>
-        <header data-aos="fade-down" data-aos-duration="1000">
-            <nav class="navbar navbar-expand-lg navbar-expand-md bg-black">
+        <header>
+            <nav class="navbar navbar-dark navbar-expand-lg navbar-expand-md bg-black">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../images/logo_chico.JPG" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,12 +67,12 @@
                 <a class="footer__izq--a" href="../pages/contacto.html">Contacto</a>
                 <p>mail@kku.uy - +598 000 000</p>
                 <div>                
-                    <a href="https://www.instagram.com/kustomkultureuruguay/"><img class="red--instagram" src="../images/instagram-brands.svg" alt=""></a>
-                    <a href="https://www.facebook.com/kustomkulturemotorcycles"><img class="red--facebook" src="../images/facebook-brands.svg" alt="facebook footer" title="facebook footer"></a>
+                    <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/instaLogoWhite.png" alt=""></a>
+                    <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logoFbWhite.png" alt="facebook footer" title="facebook footer"></a>
                 </div>
             </div>
             <div>
-                <img class="footer__logo" src="../images/logo_triangulo_blanco.png" alt="kku footer" title="kku footer">
+                <img class="img-fluid" src="../images/logo_triangulo_blanco.png" alt="kku footer" title="kku footer">
             </div>
             <div class="footer__der">
                 <p>BrainIT 2022 - Todos los derechos reservados</p>
