--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <div>
     <!--Aca empeiza el header-->
     <header>
-        <nav class="navbar navbar-dark navbar-expand-lg navbar-expand-md bg-black">
+        <nav class="row navbar navbar-dark navbar-expand-md bg-black">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="images/logo_chico.JPG" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="fs-4 navbar-nav m-auto mb-2 mb-lg-0">
+                    <ul class="fs-4 nav justify-content-center m-auto">
                         <li class="nav-item">
                             <a class="text-white nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
