--- a/pages/bikes_for_sale.html
+++ b/pages/bikes_for_sale.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>KKU Bikes for Sale</title>
     <meta charset="UTF-8">
@@ -11,74 +12,101 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/estilos_scss.css">
 </head>
+
 <body>
-    <div>
-        <header>
-            <nav class="navbar navbar-dark navbar-expand-lg navbar-expand-md bg-black">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="../index.html"><img src="../images/logo_chico.JPG" alt=""></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="fs-4 navbar-nav m-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="text-white nav-link active" aria-current="page" href="../index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="text-white nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="text-white nav-link active" aria-current="page" href="bikes_for_sale.html">Bikes For Sale</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="text-white nav-link active" aria-current="page" href="kkulifestile.html">KKU Lifestile</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="text-white nav-link active" aria-current="page" href="contacto.html">Contacto</a>
-                            </li>
-                        </ul>
+    <header>
+        <nav class="row navbar navbar-dark navbar-expand-md bg-black">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="../images/logo_chico.JPG" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="fs-4 nav justify-content-center m-auto">
+                        <li class="nav-item">
+                            <a class="text-white nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="text-white nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="text-white nav-link active" aria-current="page" href="bikes_for_sale.html">Bikes
+                                For Sale</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="text-white nav-link active" aria-current="page" href="kkulifestile.html">KKU
+                                Lifestile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="text-white nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <section class="estilo__seccion">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+            </div>
+            <div class="row carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../images/hondaCb400.JPG" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Honda CB400</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident
+                            exercitationem esse asperiores neque non itaque sapiente,
+                            molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
                     </div>
                 </div>
-            </nav>
-        </header>
-        <div class="estilo__seccion">
-            <h2>Motos en Venta</h2>
-        </div>
-        <section class="contenedor__cards">
-            <div class="card ventaMotos__card">
-                <h2>Honda CB400</h2>
-                <img src="../images/hondaCb400.JPG" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
-                molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
-                <a href="#" class="btn"><img src="../images/info_outline_white_36dp.svg" alt=""></a>
-            </div>
-            <div class="ventaMotos__card">
-                <h2>Suzuki GS750</h2>
-                <img src="../images/suzukiGs750.JPG" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
-                molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
-                <a href="#" class="btn btn-light">Ver</a>
-            </div>
-        </section>
-
-        <footer class="footer">
-            <div class="footer__izq">
-                <a class="footer__izq--a" href="../pages/contacto.html">Contacto</a>
-                <p>mail@kku.uy - +598 000 000</p>
-                <div>                
-                    <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/instaLogoWhite.png" alt=""></a>
-                    <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logoFbWhite.png" alt="facebook footer" title="facebook footer"></a>
+                <div class="carousel-item">
+                    <img src="../images/suzukiGs750.JPG" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Suzuki GS750</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident
+                            exercitationem esse asperiores neque non itaque sapiente,
+                            molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
+                    </div>
                 </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="footer__izq">
+            <a class="footer__izq--a" href="../pages/contacto.html">Contacto</a>
+            <p>mail@kku.uy - +598 000 000</p>
             <div>
-                <img class="img-fluid" src="../images/logo_triangulo_blanco.png" alt="kku footer" title="kku footer">
+                <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/instaLogoWhite.png"
+                        alt=""></a>
+                <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logoFbWhite.png"
+                        alt="facebook footer" title="facebook footer"></a>
             </div>
-            <div class="footer__der">
-                <p>BrainIT 2022 - Todos los derechos reservados</p>
-            </div>          
-        </footer>
-    </div>
+        </div>
+        <div>
+            <img class="img-fluid" src="../images/logo_triangulo_blanco.png" alt="kku footer" title="kku footer">
+        </div>
+        <div class="footer__der">
+            <p>BrainIT 2022 - Todos los derechos reservados</p>
+        </div>
+    </footer>
     <script src="../js/bootstrap.bundle.js"></script>
 </body>
+
 </html>
