--- a/index.html
+++ b/index.html
@@ -70,9 +70,43 @@
             <a href="pages/nosotros.html#nuestrosProyectos"><h2>Custom Bikes</h2></a>
         </div>
         <div data-aos="fade-up-right" data-aos-duration="1500" class="col-sm-12 col-md-6 col-lg-6">
-            <img class="img-fluid" src="images/hondacgl.JPG" alt="carrete deslizable" title="carrete deslizable">  
+            <section class="estilo__seccion">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="row carousel-inner">
+                        <div class="carousel-item">
+                            <img src="images/hondacgl3.JPG" class="d-block w-100" alt="...">
+                         
+                        </div>
+                        <div class="carousel-item active">
+                            <img src="images/hondacgl.JPG" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/hondacgl2.JPG" class="d-block w-100" alt="...">
+                         
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </section>
         </div>
-        <div data-aos="fade-up-left" data-aos-duration="1500" class="col-sm-12 col-md-6 col-lg-6">            
+        <div data-aos="fade-up-left" data-aos-duration="1500" class="col-sm-12 col-md-6 col-lg-6">          
             <h2>Honda CGL 125</h2>
             <p>
                 Desarmamos las ruedas y cambiamos los aros por unos más anchos para ponerle cubiertas de mayor rodado,
